@@ -1120,6 +1120,7 @@ Commands.XPBar.DisableAll=&6 All mcMMO XP bars are now disabled, use /mmoxpbar r
 #Modern Chat Settings
 Chat.Style.Admin=&b(A) &r{0} &b\u2192 &r{1}
 Chat.Style.Party=&a(P) &r{0} &a\u2192 &r{1}
+Chat.Style.Party.Leader=&a(P) &r{0} &6\u2192 &r{1}
 Chat.Identity.Console=&6* Console *
 Chat.Channel.On=&6(&amcMMO-Chat&6) &eYour chat messages will now be automatically delivered to the &a{0}&e chat channel.
 Chat.Channel.Off=&6(&amcMMO-Chat&6) &7Your chat messages will no longer be automatically delivered to specific chat channels.
