@@ -4,6 +4,7 @@ Version 2.1.151
     All chat settings that used to be in 'config.yml' are now in 'chat.yml'
     The list of party members shown when using the party command has been simplified, this will change again in the T&C update
     Fixed a bug where players could use the party chat command without the party chat permission
+    Added 'Chat.Style.Party.Leader' which is the chat style the party leader uses when communicating to the party
 
     NOTES:
     I greatly disliked the old party member list but was avoiding rewriting it until later, someone pointed out how ugly it was and my OCD triggered and now it is rewritten. I will rewrite it again in T&C.
